# Project-ARGUS

./: README.md
Project ARGUS-V2/: AI_TEAM_CONTRIBUTION_SUMMARY.md  CONTRIBUTION_LOGGING_SUMMARY.md  GITHUB_SETUP_GUIDE.md  LICENSE  README_ENHANCEMENT_SUMMARY.md  ai_team_contribution_demo.py  demo_contribution_logging.py  enhance_readme_orchestration.py  pyproject.toml  quality_gates.yml  requirements.txt  run_self_improvement.py  self_improvement_request.json  setup_github.sh  simple_contribution_demo.py  simple_validation.py  validate_improvements.py  validate_recursive_improvement.py
Project ARGUS-V2/argus_core/: __init__.py  advanced_routing.py  cli.py  connection_pool.py  contribution_logger.py  dynamic_quality_gates.py  gateway.py  intelligence.py  monitoring.py  orchestrator.py  scheduler.py  wizard.py
Project ARGUS-V2/argus_core/hooks/: __init__.py
Project ARGUS-V2/docs/migration/: codebase_analysis.md  roadmap.md
Project ARGUS-V2/plugins/: __init__.py  agent_providers.py  quality_gates.py
Project ARGUS-V2/projects/: __init__.py  microservice.py
Project ARGUS-V2/projects/hello-microservice/: README.md  argus.yaml  requirements.txt
Project ARGUS-V2/projects/hello-microservice/src/: main.py
Project ARGUS-V2/projects/hello-microservice/tests/: test_main.py
Project ARGUS-V2/tests/: test_orchestrator.py
